Update some incorrectly styled diagrams (#364)

--- a/docs/mcu/coredumps.mdx
+++ b/docs/mcu/coredumps.mdx
@@ -391,10 +391,13 @@ The Memfault SDK provides functions for verifying the coredump platform storage
 layer is correctly implemented, by performing various reads, writes, and erases
 using the platform storage API.
 
+<!-- Source: https://www.figma.com/file/GQIimU8iOtCrxGrdE6RxL3/Memfault-SDK-Architecture?node-id=814%3A127&t=bXGv5Ie7HbUaeeoC-0 -->
+
 <p align="center">
   <img
-    src="/img/docs/mcu/coredump-storage.drawio.svg"
-    alt="/img/docs/mcu/coredump-storage.drawio.svg"
+    width="600"
+    src="/img/docs/mcu/coredump-storage.svg"
+    alt="/img/docs/mcu/coredump-storage.svg"
   />
 </p>
 
