--- a/docs/mcu/symbol-file-build-ids.mdx
+++ b/docs/mcu/symbol-file-build-ids.mdx
@@ -39,7 +39,15 @@ Build Ids are automatically generated based on the contents of the ELF file.
 Software Type & Version identifiers are manually assigned and therefore
 error-prone.
 
-![](/img/docs/mcu/build-id-symbol-file.excalidraw.png)
+<!-- Source: https://www.figma.com/file/GQIimU8iOtCrxGrdE6RxL3/Memfault-SDK-Architecture?node-id=825%3A59&t=bXGv5Ie7HbUaeeoC-0 -->
+
+<p align="center">
+  <img
+    width="600"
+    src="/img/docs/mcu/build-id-symbol-file.svg"
+    alt="/img/docs/mcu/build-id-symbol-file.svg"
+  />
+</p>
 
 :::tip
 
