Add MCU fleet sampling details to the table, fix typos (#367)

--- a/docs/platform/fleet-sampling.mdx
+++ b/docs/platform/fleet-sampling.mdx
@@ -5,7 +5,7 @@ sidebar_label: Fleet Sampling
 ---
 
 As your fleet grows, it becomes more costly to send, process and store the data
-from each one of your devices. Fleet Sampling will help keeping the costs low by
+from all of your devices. Fleet Sampling will help keeping the costs low by
 collecting diagnostics and performance data only from a smaller, yet
 statistically significant, subset of your fleet. At large fleet sizes, this
 smaller "sampled" population of devices provide sufficiently representative data
@@ -23,11 +23,20 @@ Each device in the fleet can be configured by turning their specific Fleet
 Sampling Aspects on or off. See the differences between the aspects and their
 respective states in the table:
 
-| Aspects/Resolutions | Platform | Off                                                | On                                                                                                                                                                                                                                                                                                                                                        |
-| ------------------- | -------- | -------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Monitoring          | Android  | No hourly heartbeats                               | [Batterystats](/docs/android/android-builtin-metrics#battery-and-related-metrics) and [custom metrics](/docs/android/android-custom-metrics) are uploaded every 2h                                                                                                                                                                                        |
-| Debugging           | Android  | No crash collection                                | Crash report collection (via Bug Reports or Caliper), reboot reasons                                                                                                                                                                                                                                                                                      |
-| Logging             | Android  | No logs, except if they are part of a crash report | Log collection and upload in the case of an overlap with a trace event (see details here). <br /> (Only on Bort SDK, see [Log Collection](/docs/platform/fleet-sampling#log-collection)) Logs that have been already collected on the device and not yet sent will also be uploaded as soon as the device receives the logging resolution change to `On`. |
+| Platform | Aspects    | Resolution: Off                                    | Resolution: On                                                                                                                                                                                                                                                                                                                                                                |
+| -------- | ---------- | -------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Android  | Monitoring | Only periodic device check-ins                     | [Batterystats](/docs/android/android-builtin-metrics#battery-and-related-metrics) and [Custom Metrics](/docs/android/android-custom-metrics) are collected every 2h                                                                                                                                                                                                           |
+| Android  | Debugging  | No crash collection                                | [Crash reports (via Bug Reports or Caliper)](/docs/android/android-bort#collection-types---bug-reports-and-caliper), [reboot reasons](/docs/android/android-reboot-events) and [Custom Events](/docs/android/custom-events) are collected                                                                                                                                     |
+| Android  | Logging    | No logs, except if they are part of a crash report | Log collection and upload in the case of an overlap with a trace event (see details [here](/docs/android/android-logging)). Logs that have been already collected on the device and not yet sent will also be uploaded as soon as the device receives the logging resolution change to `On`. For details, see [Log Collection](/docs/platform/fleet-sampling#log-collection). |
+| MCU      | Monitoring | Only periodic device check-ins                     | Periodic collection of [Metrics](/docs/mcu/metrics-api) with heartbeats                                                                                                                                                                                                                                                                                                       |
+| MCU      | Debugging  | No crash/debug data collection                     | [Coredumps](/docs/mcu/coredumps), [trace events](/docs/mcu/trace-events), [reboot reasons](/docs/mcu/reboot-reason-tracking) and [Custom Data Recordings](/docs/mcu/custom-data-recording) are collected                                                                                                                                                                      |
+
+:::note
+
+Please also see [Rate Limits](/docs/platform/rate-limiting/) page as collection
+of these items are subject to rate limiting.
+
+:::
 
 Your devices won’t be “in the dark” even if all three aspect resolutions are set
 to `Off`: They’ll still continue contacting Memfault to check for OTA updates
