Add note about CDR to rate limiting table (#368)

--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -160,5 +160,17 @@ Below is a list of the APIs and payloads that may be rate-limited:
         events reaches a threshold (by default, 1000 events).
       </td>
     </tr>
+    <tr id="custom-data-recordings">
+      <td>Custom Data Recording</td>
+      <td>Device</td>
+      <td>All</td>
+      <td>
+        <Link to="/docs/platform/inspecting-a-device/#custom-data-recordings">
+          Custom Data Recordings
+        </Link>{" "}
+        are limited to 1 CDR upload per device per 24-hour period, and a maximum
+        size of 16MB per CDR upload payload
+      </td>
+    </tr>
   </tbody>
 </table>
