--- a/blog/2022-10-31.mdx
+++ b/blog/2022-10-31.mdx
@@ -2,12 +2,12 @@
 title: October 2022
 ---
 
-## Tracking Battery Life Best Practices
+## Best Practices: Tracking Battery Life
 
 Two of the most important IoT reliability metrics are the expected and the
 actual battery life for devices. Understanding and predicting trends for battery
 life and detecting regressions with thousands to millions of devices in the
-field is a challenging problem that
+field is a challenging problem that
 [Memfault recently published advice and product improvements for.](/docs/best_practices/metrics-for-battery-life/)
 
 ![tracking_battery_life_best_practices.png](/img/blog/2022-10-31-Tracking-Battery-Life-Best-Practices.png)
