--- a/docs/platform/charts.mdx
+++ b/docs/platform/charts.mdx
@@ -80,9 +80,9 @@ upload data for a given metric before a chart for that metric can be created.
 | Count        | Number of times a (non-ignored) value was received. |
 | Sum          | Sum of all readings.                                |
 
-The aggregation of the metrics is done periodically, usually every few hours. To
-refresh the data inside a chart immediately, click the refresh button in the
-chart itself.
+The aggregation of metric data for each day is performed once the day has ended.
+For example, if data is received on January 1st, the metric charts will show
+this data on January 2nd.
 
 For more information about adding metrics to your devices:
 
