Update integration of ESP-IDF to support v5

--- a/docs/mcu/esp32-guide.mdx
+++ b/docs/mcu/esp32-guide.mdx
@@ -17,7 +17,7 @@ not, the
 [official getting started guide](https://docs.espressif.com/projects/esp-idf/en/latest/esp32/get-started/index.html)
 is a great resource!
 
-The integration works for both ESP-IDF 3.x and 4.x releases.
+The integration works for all versions of ESP-IDF between 3.x and 5.0.
 
 This integration is tested on the
 [ESP32-WROVER-KIT V4.1](https://docs.espressif.com/projects/esp-idf/en/v4.4.1/esp32/hw-reference/esp32/get-started-wrover-kit.html),
