Add info text for metric display name (#393)
* Add info text for metric display name

* Prettified Code!

* Update docs/platform/metrics.mdx

Co-authored-by: Heiko Behrens <mail@HeikoBehrens.net>

* Prettified Code!

---------

Co-authored-by: can-memfault <can-memfault@users.noreply.github.com>
Co-authored-by: Heiko Behrens <mail@HeikoBehrens.net>

--- a/docs/platform/metrics.mdx
+++ b/docs/platform/metrics.mdx
@@ -46,6 +46,15 @@ Metric can have a few properties:
 - the value `range` which informs charts and other components
 - a set of `ignored_values` (like `-1`) which should be ignored.
 
+:::info
+
+Please contact us at support@memfault.com if you want to use a custom name that
+is different from the technical id reported by the devices for a metric across
+[Charts](/docs/platform/charts), [Alerts](/docs/platform/alerts) and Device
+Timeline.
+
+:::
+
 ## Timeseries
 
 By marking a Metric as a Timeseries you'll be able to use it in
